# swagger_server/controllers/user_controller.py
@@ -183,6 +183,34 @@ def mib_resources_users_add_to_blacklist(body, user_id):  # noqa: E501
     return [item.serialize() for item in list], 200
 
 
+def mib_resources_users_delete_user_from_blacklist(user_id, blacklisted_id):
+    """mib_resources_users_delete_user_from_blacklist
+
+    Delete a user from the blacklist # noqa: E501
+
+    :param user_id: User Unique ID
+    :type user_id: int
+    :param user_blacklisted_idid: User Unique ID
+    :type blacklisted_id: int
+
+    :rtype: None
+    """
+    if user_id == blacklisted_id:
+        return abort(404)
+
+    user = UserManager.retrieve_by_id(user_id)
+    user_blacklisted = UserManager.retrieve_by_id(blacklisted_id)
+
+    if user is None or user_blacklisted is None:
+        return abort(404)
+
+    blacklist = UserManager.retrieve_blacklisted_user(user_id, blacklisted_id)
+
+    UserManager.delete_blacklist(blacklist)
+
+    return Response(status=200)
+
+
 def mib_resources_users_get_blacklist(user_id):  # noqa: E501
     """mib_resources_users_get_blacklist
 
